--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="didnt_get_code">Не получили код?</string>
     <string name="wrong_mail">Ввели неправильную почту?</string>
     <string name="next">Далее</string>
+    <string name="text_1">The concierge was rude and gave me attitude when I asked for information.</string>
 </resources>
