--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -32,4 +32,12 @@
     <string name="talant_video"><b>Видео таланта</b></string>
     <string name="step_4">Шаг 4 из 6</string>
     <string name="add_ur_video">Добавте\nваше видео</string>
+    <string name="rating"><b>Рейтинг</b></string>
+    <string name="stars">Звезды</string>
+    <string name="producers">Продюсеры</string>
+    <string name="top_20"><b>ТОП-20</b></string>
+    <string name="name_hint">Иван Иванов</string>
+    <string name="number_hint">1</string>
+    <string name="casting">Кастинг</string>
+    <string name="statistics">Статистика</string>
 </resources>
