--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="to_sign_in">Зарегистрироваться</string>
     <string name="back">Назад</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
+    <string name="notifications">Уведомления</string>
+    <string name="contacts">Контакты</string>
+    <string name="profile">Профиль</string>
 </resources>
