--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="profile_description">Описание для профиля</string>
     <string name="tell_about_urself">Расскажите о себе (максимум 280 символов)</string>
     <string name="text_for_casting">Это тот текст, который люди увидят в разделе кастинга</string>
+    <string name="xce_factor">XCE FACTOR</string>
 </resources>
