--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="xce_factor">XCE FACTOR</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
     <string name="add_video">Добавить видео</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
