--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="xce_factor">XCE FACTOR</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
     <string name="add_video">Добавить видео</string>
+    <string name="no_more_videos">Непросмотернные видео кончились, повторите попытку позднее</string>
 </resources>
