--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -64,8 +64,10 @@
     <string name="xce_factor">XCE FACTOR</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
     <string name="add_video">Добавить видео</string>
-    <string name="no_more_videos">Непросмотернные видео кончились, повторите попытку позднее</string>
+    <string name="no_more_videos">Непросмотеренные видео кончились, повторите попытку позднее</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="no_like_rn">У вас пока нет лайков. Загляните позже</string>
 </resources>
