fix3of4problemAndNewIcon

--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Talent Show</string>
+    <string name="app_name">XCE FACTOR</string>
     <string name="choose_role"><b>Выбери роль</b></string>
     <string name="different_tasks_different_role">В зависимости от роли тебе предстоят\n разные задачи</string>
     <string name="star"><b>Звезда</b></string>
