--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="casting_dialog_text">Напишите Елизавете Грановой несколько хороших слов. Если ей понравится твоё сообщение, ты получишь её контакты.</string>
     <string name="sing_or_log"><b>Войдите или зарегистрируйтесь</b></string>
     <string name="sing_in">Войти</string>
-    <string name="sign_up">Регистрация</string>
+    <string name="sign_up">Зарегистрироваться</string>
     <string name="skip_auth">Пропустить</string>
     <string name="auth"><b>Авторизация</b></string>
     <string name="password">Пароль</string>
@@ -66,7 +66,6 @@
     <string name="add_video">Добавить видео</string>
     <string name="no_more_videos">Непросмотеренные видео кончились, повторите попытку позднее</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="no_like_rn">У вас пока нет лайков. Загляните позже</string>
@@ -74,4 +73,8 @@
     <string name="best_30_seconds">Лучшие 30 секунд</string>
     <string name="capture_by_camera">Снять с камеры</string>
     <string name="choose_file">Выбрать файл</string>
+    <string name="confirm_ur_mail"><b>Подтвердите вашу почту</b></string>
+    <string name="confirm_via_link">Для подтверждения перейдите по ссылке, отправленной на ваш почтовый ящик</string>
+    <string name="no_code">Не получили код?</string>
+    <string name="ready">Готово</string>
 </resources>
