--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="password">Пароль</string>
     <string name="fields_empty">Поля не должны быть пустыми</string>
     <string name="name">Имя</string>
-    <string name="i_accept_terms">Регистрируясь, я принимаю условия использования</string>
+    <string name="i_accept_terms">Регистрируясь, я принимаю <a href="https://www.google.ru">условия пользования</a></string>
     <string name="to_sign_in">Зарегистрироваться</string>
     <string name="back">Назад</string>
     <string name="load_new_video"><b>Загрузка нового видео</b></string>
@@ -77,4 +77,8 @@
     <string name="confirm_via_link">Для подтверждения перейдите по ссылке, отправленной на ваш почтовый ящик</string>
     <string name="no_code">Не получили код?</string>
     <string name="ready">Готово</string>
+    <string name="terms_of_using"> <a href="https://www.google.ru">условия пользования</a></string>
+    <string name="enter_ur_name">Введите свое имя</string>
+    <string name="enter_ur_mail">Введите почту @edu.hse.ru</string>
+    <string name="create_password">Придуймате пароль</string>
 </resources>
