--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="password">Пароль</string>
     <string name="fields_empty">Поля не должны быть пустыми</string>
     <string name="name">Имя</string>
-    <string name="i_accept_terms">Регистрируясь, я принимаю <a href="https://xce-factor.ru/TermsOfUse.html">условия пользования</a></string>
+    <string name="i_accept_terms">Регистрируясь, я принимаю <a href="https://www.xce-factor.ru/TermsOfUse.html">условия пользования</a></string>
     <string name="to_sign_in">Зарегистрироваться</string>
     <string name="back">Назад</string>
     <string name="load_new_video"><b>Загрузка нового видео</b></string>
@@ -81,4 +81,5 @@
     <string name="enter_ur_name">Введите свое имя</string>
     <string name="enter_ur_mail">Введите почту @edu.hse.ru</string>
     <string name="create_password">Придуймате пароль</string>
+    <string name="number_likes_u_got">Это количество лайков, которые ты получил за все свои видео</string>
 </resources>
