--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="no_like_rn">У вас пока нет лайков. Загляните позже</string>
-    <string name="casting_video_fragment">Эти 30 секунд будут показаны всем людям в разделе кастинг. Полное видео доступно лишь для тех, с кем вы поделились своим контактом.</string>
+    <string name="casting_video_fragment">Выбранный вами фрагмент будет отображаться в разделах Кастинг и Рейтинг.</string>
     <string name="best_30_seconds">Лучшие 30 секунд</string>
     <string name="capture_by_camera">Снять с камеры</string>
     <string name="choose_file">Выбрать файл</string>
