--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="xce_factor">XCE FACTOR</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
     <string name="add_video">Добавить видео</string>
-    <string name="no_more_videos">Непросмотеренные видео кончились, повторите попытку позднее</string>
+    <string name="no_more_videos">Непросмотренные видео кончились, повторите попытку позднее</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
