Fix strings for "You"

--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="step_1">шаг 1 из 5</string>
     <string name="talant_video"><b>Видео таланта</b></string>
     <string name="step_4">Шаг 4 из 6</string>
-    <string name="add_ur_video">Добавте\nваше видео</string>
+    <string name="add_ur_video">Добавте\nВаше видео</string>
     <string name="rating">Рейтинг</string>
     <string name="stars">Звезды</string>
     <string name="producers">Продюсеры</string>
@@ -64,17 +64,17 @@
     <string name="xce_factor">XCE FACTOR</string>
     <string name="want_load_video"><b>Хочешь загрузить видео?</b></string>
     <string name="add_video">Добавить видео</string>
-    <string name="no_more_videos">Ого! Вы посмотрели все видео в Кастинге. Лучшие из них вы можете пересмотреть в Рейтинге, а еще можете загрузить свое!</string>
+    <string name="no_more_videos">Ого! Вы посмотрели все видео в Кастинге. Лучшие из них Вы можете пересмотреть в Рейтинге, а еще можете загрузить свое!</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="no_like_rn">Здесь отображаются голоса тех, кто хочет видеть вас в финале шоу\nXCE FACTOR 2020.\nЗагрузите видео и отправьте его в Кастинг, чтобы получить первые лайки!</string>
-    <string name="casting_video_fragment">Выбранный вами фрагмент будет отображаться в разделах Кастинг и Рейтинг.</string>
+    <string name="no_like_rn">Здесь отображаются голоса тех, кто хочет видеть Вас в финале шоу\nXCE FACTOR 2020.\nЗагрузите видео и отправьте его в Кастинг, чтобы получить первые лайки!</string>
+    <string name="casting_video_fragment">Выбранный Вами фрагмент будет отображаться в разделах Кастинг и Рейтинг.</string>
     <string name="best_30_seconds">Лучшие 30 секунд</string>
     <string name="capture_by_camera">Снять с камеры</string>
     <string name="choose_file">Выбрать файл</string>
-    <string name="confirm_ur_mail"><b>Подтвердите вашу почту</b></string>
-    <string name="confirm_via_link">Для подтверждения перейдите по ссылке, отправленной на ваш почтовый ящик</string>
+    <string name="confirm_ur_mail"><b>Подтвердите Вашу почту</b></string>
+    <string name="confirm_via_link">Для подтверждения перейдите по ссылке, отправленной на Ваш почтовый ящик</string>
     <string name="no_code">Не получили код?</string>
     <string name="ready">Готово</string>
     <string name="terms_of_using"> <a href="https://www.google.ru">условия пользования</a></string>
@@ -101,11 +101,11 @@
     <string name="no_description">Этот человек ещё не добавил описание к своему профилю</string>
     <string name="all_videos">Все видео автора</string>
     <string name="enter_password">Введите пароль</string>
-    <string name="info_profile">Это ваш личный профиль. Вы можете выбрать себе аватарку, заполнить описание и загрузить видео своего таланта. Максимальное количество загруженных видео — 4.\n\nНе забудьте указать свои соцсети, чтобы пользователи могли связаться с вами и познакомиться.\n\nЧтобы ваше видео могли увидеть все пользователи и проголосовать за него, нажмите “●●●” на видео и выберите «Отправить в кастинг». Одновременно находиться в Кастинге может только одно видео.\n\nКогда вы заменяете видео в Кастинге, лайки за предыдущее сохраняются. Каждое видео, отправленное в Кастинг, будет показано всем пользователям один раз.\n\nГолоса, они же лайки, за все видео, отправленные в Кастинг, суммируются. Если вы удаляете видео, то теряете полученные за него лайки.\n\nЧтобы выбрать другой 30-секундный фрагмент, нажмите “●●●” на видео и выберите «Изменить фрагмент».</string>
-    <string name="info_casting">В Кастинге все пользователи голосуют за видео с талантами. Если вы хотите видеть талант в финале шоу XCE FACTOR 2020, нажмите “♡” или свайпните вправо. Если вы хотите пропустить видео, нажмите “✕” или свайпните влево.\n\nСвайп вправо приносит пользователю 1 лайк, свайп влево — меняет видео с текущего на следующее, не вычитая лайков.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.\n\nЧтобы загрузить свое видео в Кастинг, нажмите “+” в правом верхнем углу. Оно быстро пройдет модерацию. В Кастинг попадают видео, на которых пользователь показывает талант и не нарушает законодательство РФ. </string>
-    <string name="info_notify">Если вы отправили видео в Кастинг, здесь вы можете увидеть, какие пользователи проголосовали за вас.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.</string>
-    <string name="info_rating"> В Рейтинге вы можете посмотреть видео 20 лучших талантов по мнению всех пользователей приложения. Отдать свой голос за талант в данном разделе нельзя, чтобы у топ-20 не было преимущества.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.</string>
-    <string name="fragment_instruction_text">На каждой странице есть значок i. Нажав на него, ты всегда можешь прочитать, что нужно делать, чтобы выиграть или получить максимум удовольствия от игры.</string>
+    <string name="info_profile">Это Ваш личный профиль. Вы можете выбрать себе аватарку, заполнить описание и загрузить видео своего таланта. Максимальное количество загруженных видео — 4.\n\nНе забудьте указать свои соцсети, чтобы пользователи могли связаться с Вами и познакомиться.\n\nЧтобы все пользователи могли увидеть Ваше видео и проголосовать за него, нажмите “●●●” на видео и выберите «Отправить в кастинг». Одновременно находиться в Кастинге может только одно видео.\n\nКогда Вы заменяете видео в Кастинге, лайки за предыдущее сохраняются. Каждое видео, отправленное в Кастинг, будет показано всем пользователям один раз.\n\nГолоса, они же лайки за все видео, отправленные в Кастинг, суммируются. Если Вы удаляете видео, то теряете полученные за него лайки.\n\nЧтобы выбрать другой 30-секундный фрагмент, нажмите “●●●” на видео и выберите «Изменить фрагмент».</string>
+    <string name="info_casting">В Кастинге все пользователи голосуют за видео с талантами. Если Вы хотите видеть талант в финале шоу XCE FACTOR 2020, нажмите “♡” или свайпните вправо. Если Вы хотите пропустить видео, нажмите “✕” или свайпните влево.\n\nСвайп вправо приносит пользователю 1 лайк, свайп влево — меняет видео с текущего на следующее, не вычитая лайков.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.\n\nЧтобы загрузить свое видео в Кастинг, нажмите “+” в правом верхнем углу. Оно быстро пройдет модерацию. В Кастинг попадают видео, на которых пользователь показывает талант и не нарушает законодательство РФ. </string>
+    <string name="info_notify">Если Вы отправили видео в Кастинг, здесь можно увидеть, какие пользователи проголосовали за Вас.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.</string>
+    <string name="info_rating"> В Рейтинге Вы можете посмотреть видео 20 лучших талантов по мнению всех пользователей приложения. Отдать свой голос за талант в данном разделе нельзя, чтобы у топ-20 не было преимущества.\n\nЧтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.</string>
+    <string name="fragment_instruction_text">На каждой странице есть значок i. Нажав на него, ты всегда сможешь прочитать, что нужно делать, чтобы выиграть или получить максимум удовольствия от игры.</string>
     <string name="fragment_welcome_text">XCE FACTOR — это первое в мире шоу талантов без жюри. Любой может показать свой талант на большую аудиторию и получить возможность выступить в шоу с трансляцией на 500 000 человек. Победитель получает главный приз по результатам зрительского голосования.</string>
     <string name="begin_game">Начать игру</string>
     <string name="begin">Начать</string>
