--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="terms_of_using"> <a href="https://www.google.ru">условия пользования</a></string>
     <string name="enter_ur_name">Введите свое имя</string>
     <string name="enter_ur_mail">Введите почту</string>
-    <string name="create_password">Придуймате пароль</string>
+    <string name="create_password">Придумайте пароль</string>
     <string name="number_likes_u_got">Это количество лайков, которые ты получил за все свои видео</string>
     <string name="open_settings">Открыть настройки</string>
     <string name="edit_profile">Редактировать профиль</string>
