update Rating semifinalists

--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
 
     <string name="facebook_app_id">[APP_ID]</string>
     <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
+    <string name="xce_factor_semifinalists">Полуфиналисты XCE FACTOR 2020</string>
 
 
 </resources>
