Add colored icons in instruction text

--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -66,10 +66,10 @@
         Когда Вы заменяете видео в Кастинге, лайки за предыдущее сохраняются. Каждое видео, отправленное в Кастинг, будет показано всем пользователям один раз.\n\n
         Голоса, они же лайки за все видео, отправленные в Кастинг, суммируются. Если Вы удаляете видео, то теряете полученные за него лайки.\n\n
         Чтобы выбрать другой 30-секундный фрагмент, нажмите “●●●” на видео и выберите «Изменить фрагмент».</string>
-    <string name="info_casting">В Кастинге все пользователи голосуют за видео с талантами. Если Вы хотите видеть талант в финале шоу XCE FACTOR 2020, нажмите “♡” или свайпните вправо. Если Вы хотите пропустить видео, нажмите “✕” или свайпните влево.\n\n
+    <string name="info_casting">В Кастинге все пользователи голосуют за видео с талантами. Если Вы хотите видеть талант в финале шоу XCE FACTOR 2020, нажмите “ %like% ” или свайпните вправо. Если Вы хотите пропустить видео, нажмите “ %dislike% ” или свайпните влево.\n\n
         Свайп вправо приносит пользователю 1 лайк, свайп влево — меняет видео с текущего на следующее, не вычитая лайков.\n\n
         Чтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.\n\n
-        Чтобы загрузить свое видео в Кастинг, нажмите “+” в правом верхнем углу. Оно быстро пройдет модерацию. В Кастинг попадают видео, на которых пользователь показывает талант и не нарушает законодательство РФ. </string>
+        Чтобы загрузить свое видео в Кастинг, нажмите “ %plus% ” в правом верхнем углу. Оно быстро пройдет модерацию. В Кастинг попадают видео, на которых пользователь показывает талант и не нарушает законодательство РФ. </string>
     <string name="info_notify">Если Вы отправили видео в Кастинг, здесь можно увидеть, какие пользователи проголосовали за Вас.\n\n
         Чтобы узнать подробную информацию о пользователе, нажмите на аватарку. Вам откроется его/ее профиль.</string>
     <string name="info_rating"> В Рейтинге Вы можете посмотреть видео 50 лучших талантов по мнению всех пользователей приложения. Отдать свой голос за талант в данном разделе нельзя, чтобы у топ-50 не было преимущества.\n\n
