Added Final tab and fixed app icon

--- a/TalentShow/app/src/main/res/values/strings.xml
+++ b/TalentShow/app/src/main/res/values/strings.xml
@@ -94,9 +94,11 @@
     <string name="wait_loading">Дождитесь окончания\n загрузки видео</string>
     <string name="percentage_format">%1$s\%%</string>
     <string name="winners_number_format">Выберите %1$s победителей</string>
+    <string name="date_format">%1$s : %2$s : %3$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="semifinalists">Полуфиналисты</string>
+    <string name="semifinal">Полуфинал</string>
+    <string name="finalists">Финал</string>
     <string name="end_battle_day">дн.</string>
     <string name="end_battle_hour">ч.</string>
     <string name="end_battle_minutes">мин.</string>
